add profile & some fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,6 @@
     <string name="no_connection_title">Нет подключения к интернету</string>
     <string name="no_connection_description">Проверьте подключение и повторите попытку</string>
     <string name="retry">Повторить попытку</string>
+
+    <string name="your_profile">Ваш профиль</string>
 </resources>
