--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,6 @@
     <string name="your_profile">Ваш профиль</string>
     <string name="edit_profile">Редактировать профиль</string>
     <string name="settings">Настройки</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="ad_found">Найдено объявлений</string>
 </resources>
